--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
